--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    servicio de fotografía de comida profesional que resalta la frescura y el 
+                    sabor de cada plato. Nuestro enfoque artístico y detallado captura la esencia de 
+                    tus preparaciones, creando imágenes que invitan a disfrutar cada bocado. Ya sea 
+                    para menús, redes sociales o campañas publicitarias, nuestras fotos transmitirán
+                    el atractivo visual que tu negocio de comida necesita para destacar.
                 </p>
             </div>
             <div class="col-12 col-md-4">
