--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Soy una fotógrafa apasionada por capturar momentos únicos, transformando historias y 
+            emociones en imágenes memorables.
         </p>
 
 
@@ -92,10 +92,10 @@
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Crítica culinaria</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    servicio de crítica culinaria detallada y objetiva, enfocado en resaltar tanto la 
+                    calidad como la creatividad de los platillos. A través de una evaluación minuciosa
+                     de los ingredientes, la presentación y la técnica, brindamos comentarios constructivos 
+                     que ayudan a mejorar la experiencia gastronómica. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
