--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     Comidas del fin <br> del mundo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Un lugar donde la gastronomía se encuentra con la historia y la cultura de los rincones más remotos del planeta.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
@@ -81,7 +79,7 @@
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
                 <p class="my-3">
-                    servicio de fotografía de comida profesional que resalta la frescura y el 
+                    Servicio de fotografía de comida profesional que resalta la frescura y el 
                     sabor de cada plato. Nuestro enfoque artístico y detallado captura la esencia de 
                     tus preparaciones, creando imágenes que invitan a disfrutar cada bocado. Ya sea 
                     para menús, redes sociales o campañas publicitarias, nuestras fotos transmitirán
@@ -92,7 +90,7 @@
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Crítica culinaria</h3>
                 <p class="my-3">
-                    servicio de crítica culinaria detallada y objetiva, enfocado en resaltar tanto la 
+                    Servicio de crítica culinaria detallada y objetiva, enfocado en resaltar tanto la 
                     calidad como la creatividad de los platillos. A través de una evaluación minuciosa
                      de los ingredientes, la presentación y la técnica, brindamos comentarios constructivos 
                      que ayudan a mejorar la experiencia gastronómica. 
@@ -102,7 +100,7 @@
                 <i class="far fa-map fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
                 <p class="my-3">
-                    bloguera de viajes apasionada por explorar nuevos destinos, sumergirme en culturas 
+                    Bloguera de viajes apasionada por explorar nuevos destinos, sumergirme en culturas 
                     diversas y compartir mis experiencias con mis seguidores. A través de mis relatos, 
                     busco inspirar a otros a aventurarse y descubrir lo mejor de cada lugar, desde 
                     rincones ocultos hasta las principales atracciones. 
